@@ -1,3 +1,11 @@
+2007-02-01  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>
+
+	* fvwm/ConfigFvwmDefaults:
+	reenable MenuScroll on titles
+
+	* fvwm/menubindings.c (menu_shortcuts):
+	don't scroll menus if scrolling would be in the wrong direction
+
 2007-02-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
 	* fvwm/move_resize.c (__resize_window):
